docs/kubernetes/preprod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: mkdocs
  labels:
    run: mkdocs
spec:
  rules:
    - host: docs.preprod.kubefirst.com
      http:
        paths:
          - backend:
              serviceName: mkdocs
              servicePort: 80
            path: /
  tls:
    - secretName: docs-tls
      hosts:
        - docs.preprod.kubefirst.com
